--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -29,7 +29,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t hkshitesh/demorefund .
+        run: docker build -t rafapaisley/refunds-api .
 
       - name: Push Docker image
         run: docker push hkshitesh/demorefund 
