Update Docker image push target to rafapaisley/refunds-api

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -32,4 +32,4 @@ jobs:
         run: docker build -t rafapaisley/refunds-api .
 
       - name: Push Docker image
-        run: docker push hkshitesh/demorefund 
+        run: docker push rafapaisley/refunds-api
